# FieldExplainer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  build.bat  build.sh  compile_commands.json  makefile  test_clipboard.sh
.cache/clangd/index/: main.cpp.433B3586638B47C1.idx
build-debug/: CMakeCache.txt  FieldExplainer.desktop  Makefile  cmake_install.cmake  compile_commands.json
build-debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-debug/FieldExplainer_autogen/: deps  moc_predefs.h
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
build-release/.qt/: QtDeploySupport.cmake
build-release/FieldExplainer_autogen/: deps  moc_predefs.h
build-release/FieldExplainer_autogen/6WJNPILU4A/: qrc_resources.cpp
build-release/install/share/FieldExplainer/: README.md
build-release/install/share/FieldExplainer/config/: settings.json
build-release/install/share/FieldExplainer/styles/: main.qss
build-release/install/share/applications/: FieldExplainer.desktop
cmake/: BuildSettings.cmake  FieldExplainer.desktop.in  InstallConfig.cmake
include/FieldExplainer/: main.h
markdown/: fix_floating_icon_segmentation_fault.md  wayland_floating_icon_fix.md
resource/: resources.qrc
src/: main.cpp
